--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 align = "center">My Playlist</h1>
+
+	<div>
+		<ul>
+			<li>Song 1</li>
+			<li>Song 2</li>
+			<li>Song 3</li>
+			<li>Song 4</li>
+			<li>Song 5</li>
+		</ul>
+		
+	</div>
+
+	<h2 align = "center">Now Playing...</h2>
+
+	<nav>
+		<video controls class = ".player_one">
+			<source src = "https://www.w3schools.com/tags/movie.mp4" type = "video/mp4">
+		</video>
+    <h2 align = "center" style = "background-color : white">MP3 songs</h2>
+		<audio controls class = ".player_two">
+			<source src = "https://www.pagalworld.com.se/files/download/id/64630" type = "audio">
+		</audio>
+	</nav>
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
