--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 
 	<div>
 		<ul>
-			<li>Song 1</li>
-			<li>Song 2</li>
-			<li>Song 3</li>
-			<li>Song 4</li>
-			<li>Song 5</li>
-		</ul>
+			<li><a target = "_blank">Song 1</a></li>
+			<li><a target = "_blank">Song 2</a></li>
+			<li><a target = "_blank">Song 3</a></li>
+			<li><a target = "_blank">Song 4</a></li>
+			<li><a target = "_blank">Song 5</a></li>
+			
 		
 	</div>
 
