--- a/main.html
+++ b/main.html
@@ -24,11 +24,11 @@
 	<h2 align = "center">Now Playing...</h2>
 
 	<nav>
-		<video controls class = ".player_one/.player_two">
+		<video controls class = "player_two">
 			<source src = "https://www.w3schools.com/tags/movie.mp4" type = "video/mp4">
 		</video>
     <h2 align = "center" style = "background-color : white">MP3 songs</h2>
-		<audio controls class = ".player_one/.player_two">
+		<audio controls class = "player_one">
 			<source src = "https://www.pagalworld.com.se/files/download/id/64630" type = "audio">
 		</audio>
 	</nav>
